--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@next/env": "^14.1.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-toast": "^1.1.5",
